--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,45 @@
-name: EDNetDev
+name: ednet_one_interpreter
+description: Shell package for EDNet One application
+version: 0.0.1
 publish_to: none
+
 environment:
-  sdk: '>=3.7.0 <4.0.0'
+  sdk: ">=3.7.0 <4.0.0"
+  flutter: ">=3.29.0"
+
 dependencies:
-  shared_preferences: ^2.2.3
+  flutter:
+    sdk: flutter
+  flutter_bloc: ^8.1.3
+  app_links: ^6.3.2
+  shared_preferences: ^2.2.2
+  cupertino_icons: ^1.0.5
+
+  # EDNet packages
+  ednet_core:
+    path: ../../packages/core
+  ednet_flow:
+    path: ../../packages/ednet_flow
+  ednet_cms:
+    path: ../../packages/cms
+
+  # Other dependencies
+  go_router: ^10.0.0
+  flutter_riverpod: ^2.3.6
+  path_provider: ^2.0.15
+  yaml: ^3.1.2
+  file_picker: ^5.3.2
+  bloc: ^8.1.3 # Added to ensure proper bloc support
 
 dev_dependencies:
-  melos: ^6.3.1
-  build_web_compilers: ^4.1.3
+  flutter_test:
+    sdk: flutter
+  flutter_lints: ^2.0.0
+  test: ^1.24.0 # Added for basic testing support
 
-melos:
-  packages:
-    - apps/one
-    - packages/core
-    - packages/code_generation
-    - packages/cms
-    - packages/content
-    - packages/types
+flutter:
+  uses-material-design: true
+  assets:
+    - lib/requirements/project/
+    - lib/requirements/system/
+    - assets/
