feat(ednet_one_interpreter): introduce new UI components and layout management
- Added various UI components including `HeaderWidget`, `FooterWidget`, `LeftSidebarWidget`, and `RightSidebarWidget` for improved navigation and content display.
- Implemented `MainContentWidget` to manage the display of entity details and relationships.
- Introduced layout management features with `MasterDetailLayoutAlgorithm` for better visualization of domain models.
- Enhanced the overall structure of the application by organizing widgets and improving user interaction.
- Removed deprecated game-related files to streamline the codebase.

--- a/packages/ednet_one_interpreter/pubspec.yaml
+++ b/packages/ednet_one_interpreter/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   app_links: ^6.3.2
   shared_preferences: ^2.2.2
   cupertino_icons: ^1.0.5
+  graphview: ^1.2.0
 
   # EDNet packages
   ednet_core:
@@ -29,6 +30,7 @@ dependencies:
   path_provider: ^2.0.15
   yaml: ^3.1.2
   file_picker: ^5.3.2
+  bloc: ^8.1.4
 
 dev_dependencies:
   flutter_test:
