feat(ednet_flow): restructure library and enhance import management
- Introduced a new export structure in `ednet_flow.dart` to eliminate naming conflicts and improve organization.
- Added `NEXT_STEPS.md` and `REFACTORING_PLAN.md` to outline the refactoring strategy and immediate next steps for the library.
- Updated `pubspec.yaml` to include `shared_preferences` as a dependency.
- Restored and organized imports across various files to ensure proper functionality and maintainability.
- Documented current architectural issues and provided a roadmap for future improvements.

--- a/packages/openapi/pubspec.yaml
+++ b/packages/openapi/pubspec.yaml
@@ -7,8 +7,7 @@ environment:
   sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
-  ednet_core:
-    path: ../core
+  ednet_core: ^1.0.0
   meta: ^1.8.0
   shelf: ^1.4.0
   shelf_router: ^1.1.3
