--- a/packages/ednet_flow/pubspec.yaml
+++ b/packages/ednet_flow/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   ednet_core: ^1.0.0
   graphview: ^1.2.0
   test: ^1.25.8
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   build_web_compilers: ^4.0.11
