--- a/packages/types/pubspec.yaml
+++ b/packages/types/pubspec.yaml
@@ -6,14 +6,12 @@ version: 1.0.0
 description: a generic Flutter component done by meta-programming in EDNetCore.
 
 environment:
-  sdk: '>=3.7.0 <4.0.0'
+  sdk: ">=3.7.0 <4.0.0"
 
 dependencies:
-  ednet_core:
-    path: ../core
+  ednet_core: ^1.0.0
   ednet_core_default_app:
     path: ../../../ednet_core_default_app
-
 
 dev_dependencies:
   build_runner: ^2.4.0
