--- a/apps/one/pubspec.yaml
+++ b/apps/one/pubspec.yaml
@@ -22,8 +22,7 @@ dependencies:
   path_provider: ^2.1.5
   ednet_core: ^1.0.0
   ednet_cms: ^1.0.0
-  ednet_one_interpreter:
-    path: ../../packages/ednet_one_interpreter
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -33,7 +32,5 @@ dev_dependencies:
   build_config: ^1.1.1
 flutter:
   uses-material-design: true
-  assets:
-    - assets/sprites/
 dependency_overrides:
   test_api: ^0.7.4
