feat(one): Enhance theme management and update dependencies
- Added `get_it` dependency for improved dependency injection.
- Updated import paths for `one_application.dart` to use the generated version.
- Refactored theme management by introducing a structured theme component system with CLI, Cheerful, and Minimalistic themes.
- Implemented a `ThemeService` to manage theme states and preferences.
- Created utility classes for consistent text styling across themes.
- Removed unused staging files to clean up the codebase.

--- a/apps/one/pubspec.yaml
+++ b/apps/one/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   ednet_core: ^1.0.0
   ednet_cms: ^1.0.0
   shared_preferences: ^2.2.2
+  get_it: ^7.6.7
 
 dev_dependencies:
   flutter_test:
