--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,45 +1,15 @@
-name: ednet_one_interpreter
-description: Shell package for EDNet One application
-version: 0.0.1
-publish_to: none
+name: ednetdev
+description: EDNet Development Workspace
+version: 1.0.0
 
 environment:
-  sdk: ">=3.7.0 <4.0.0"
-  flutter: ">=3.29.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.3
-  app_links: ^6.3.2
-  shared_preferences: ^2.2.2
-  cupertino_icons: ^1.0.5
-
-  # EDNet packages
-  ednet_core:
-    path: ../../packages/core
-  ednet_flow:
-    path: ../../packages/ednet_flow
-  ednet_cms:
-    path: ../../packages/cms
-
-  # Other dependencies
-  go_router: ^10.0.0
-  flutter_riverpod: ^2.3.6
-  path_provider: ^2.0.15
-  yaml: ^3.1.2
-  file_picker: ^5.3.2
-  bloc: ^8.1.3 # Added to ensure proper bloc support
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-  test: ^1.24.0 # Added for basic testing support
-
-flutter:
-  uses-material-design: true
-  assets:
-    - lib/requirements/project/
-    - lib/requirements/system/
-    - assets/
+  melos: ^3.0.0
