chore: Update .gitignore to include VSCode settings
- Added .vscode/settings.json to the .gitignore file to prevent VSCode configuration files from being tracked.
- Retained existing entry for macOS Flutter generated files.

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,4 @@ pubspec.lock
 
 # macOS specific Flutter generated files
 **/macos/Flutter/GeneratedPluginRegistrant.swift
+.vscode/settings.json
