--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "cursor.general.gitGraphIndexing": "enabled",
     "cursor.cpp.disabledLanguages": [
         "markdown"
-    ]
+    ],
+    "dart.flutterSdkPath": "/Users/slavisam/bin/flutter"
 }
