chore: remove vscode settings from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # IDE and Editor files
 .idea/
 .vscode/
+.vscode/settings.json
 *.iml
 *.ipr
 *.iws
@@ -132,4 +133,5 @@ pubspec.lock
 
 # macOS specific Flutter generated files
 **/macos/Flutter/GeneratedPluginRegistrant.swift
+
 .vscode/settings.json
