--- a/packages/core/pubspec.yaml
+++ b/packages/core/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   expressions: ^0.2.5+2
   test: ^1.25.8
   equatable: ^2.0.5
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   build_web_compilers: ^4.0.11
