feat(dependencies): update package dependencies and add new packages
- Added `ednet_core_flutter` to the project packages in `melos.yaml` for enhanced modularity.
- Updated `pubspec.yaml` to include `provider` dependency version `^6.1.1` for state management improvements.
- Enhanced `pubspec.lock` with new dependencies including `nested`, `provider`, `characters`, `ffi`, `material_color_utilities`, and others to ensure compatibility and feature richness.
- Refactored test cases in `ednet_core_types_type_test.dart` for improved clarity and consistency in assertions.
- This update aligns with ongoing efforts to enhance the codebase's functionality and maintainability.

--- a/melos.yaml
+++ b/melos.yaml
@@ -9,6 +9,7 @@ packages:
   - "packages/content"
   - "packages/types"
   - "packages/ednet_flow"
+  - "packages/ednet_core_flutter"
 
 # Recommended option for projects with Dart 2.17.0 or greater.
 #
