--- a/packages/ednet_core_flutter/pubspec.yaml
+++ b/packages/ednet_core_flutter/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   expressions: ^0.2.5
   meta: ^1.9.1
   yaml: ^3.1.2
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
