--- a/apps/one/pubspec.yaml
+++ b/apps/one/pubspec.yaml
@@ -1,4 +1,4 @@
-name: ednet_one
+name: ednet_one_archive
 description: EDNet One - A one-stop solution for domain-driven design
 version: 0.0.1+1
 publish_to: "none"
@@ -14,7 +14,7 @@ dependencies:
   ednet_core_flutter:
     path: ../../packages/ednet_core_flutter
   charts_flutter: ^0.12.0
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.8
   flutter_bloc: ^8.1.1
   flutter_slidable: ^2.0.0
   google_fonts: ^3.0.1
