--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,8 @@
-name: ednetdev
-description: EDNet Development Workspace
-version: 1.0.0
+name: one
+description: EDNetOne - Explicit Democracy Network One
+publish_to: "none"
+
+version: 1.0.0+1
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -8,9 +10,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^6.1.1
+  cupertino_icons: ^1.0.2
+  ednet_cms:
+    path: ../cms/packages/cms
+  json_serializable: ^6.7.0
+  yaml: ^3.1.2
+  build_runner: ^2.4.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  melos: ^3.0.0
+  flutter_lints: ^2.0.0
+
+flutter:
+  uses-material-design: true
