--- a/packages/ednet_core_flutter/pubspec.yaml
+++ b/packages/ednet_core_flutter/pubspec.yaml
@@ -16,11 +16,14 @@ dependencies:
   meta: ^1.9.1
   yaml: ^3.1.2
   shared_preferences: ^2.5.3
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  mockito: ^5.4.4
+  build_runner: ^2.4.9
 
 flutter:
   uses-material-design: true
