chore: update package dependencies and versions across the project
- Changed `ednet_cms` dependency from a local path to a hosted version, updating its version to `0.0.2`.
- Updated `ednet_core` and `ednet_core_flutter` dependencies to use the hosted version `^0.0.1` in multiple applications.
- Adjusted `ednet_code_generation` version to `0.0.4` and `flutter` SDK constraint to `>=3.27.0`.
- Refactored `drift` and `test_core_flutter` packages to utilize the hosted version of `ednet_core` at `^1.0.0`, ensuring consistency across the codebase.

--- a/apps/one/pubspec.yaml
+++ b/apps/one/pubspec.yaml
@@ -9,10 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  ednet_core:
-    path: ../../packages/core
-  ednet_core_flutter:
-    path: ../../packages/ednet_core_flutter
+  ednet_core: ^0.0.1
+  ednet_core_flutter: ^0.0.1
   fl_chart: ^0.66.2
   cupertino_icons: ^1.0.8
   flutter_bloc: ^8.1.1
