--- a/packages/ednet_core_flutter/pubspec.yaml
+++ b/packages/ednet_core_flutter/pubspec.yaml
@@ -10,8 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  ednet_core:
-    path: ../core
+  ednet_core: ^1.0.0
   expressions: ^0.2.5
   meta: ^1.9.1
   yaml: ^3.1.2
